--- a/06_class/01.me .ipynb
+++ b/06_class/01.me .ipynb
@@ -33,7 +33,7 @@
     "    national = 'korea'    # 속성\n",
     "    \n",
     "    def greeting(self):                    # 기능\n",
-    "        return 'Hello. This is Python'  "
+    "        return 'Hello. This is Python'     # 첫번째 매게변수로 self!"
    ]
   },
   {
@@ -76,7 +76,7 @@
     "    language = 'korean'\n",
     "    \n",
     "    def __init__(self, name, age):  # __init__ 생성자\n",
-    "        self.name = name\n",
+    "        self.name = name             # 생성자를 통해 인스턴스 만들어야 다음이 가능\n",
     "        self.age = age\n",
     "    \n",
     "    def greeting(self):\n",
@@ -93,6 +93,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Hello:   # 클래스 생성성\n",
+    "\n",
+    "    def greeting(self):      #매소드 생성성\n",
+    "        print(\"Hello, world!\")   \n",
+    "    \n",
+    "a = Hello()   #객체 , 인스턴스 생성\n",
+    "\n",
+    "a.greeting() # 메소드 호출\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "저의 이름은 nirsa이고 나이는 80 주소는 인천 광역시입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Member: \n",
+    "\n",
+    "    def __init__(self,name,age,address):  #속성 생성\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.address = address\n",
+    "    \n",
+    "    def info(self):  # 매소드 생성\n",
+    "        print(f\"저의 이름은 {self.name}이고 나이는 {self.age} 주소는 {self.address}입니다.\")\n",
+    "\n",
+    "introduce = Member('nirsa',80,'인천 광역시')  # 인스턴스 생성, init에 인자에 맞춰서 넣어줘야 함   # class Member가 호출되기 위해서는 들여쓰기 상태 안됨!\n",
+    "\n",
+    "    # 매소드 호출\n",
+    "introduce.info()\n",
+    "              "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "저의 이름은 nirsa이고 나이는 80 주소는 인천 광역시입니다.\n",
+      "클래스 속성 [80]\n",
+      "저의 이름은 alpha이고 나이는 68 주소는 서울 특별시입니다.\n",
+      "클래스 속성성 [80, 68]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Member:\n",
+    "    value = []    # 여기에 10 잇으면 왜 인스턴스 속성성\n",
+    "\n",
+    "    def info(self,name,age,address):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.address = address\n",
+    "        print(f\"저의 이름은 {self.name}이고 나이는 {self.age} 주소는 {self.address}입니다.\")\n",
+    "\n",
+    "        Member.value.append(age)\n",
+    "        print(\"클래스 속성 {}\".format(Member.value)) # 이건 왜 클래스 속성?\n",
+    "\n",
+    "    def info2(self,name,age,address):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.address = address\n",
+    "        print(f\"저의 이름은 {self.name}이고 나이는 {self.age} 주소는 {self.address}입니다.\")\n",
+    "\n",
+    "        Member.value.append(age)  # 이거 없으면 68이 반영이 안 됨\n",
+    "        print('클래스 속성 {}'.format(Member.value))\n",
+    "\n",
+    "introduce = Member()\n",
+    "\n",
+    "introduce.info('nirsa',80,'인천 광역시')\n",
+    "introduce.info2(\"alpha\",68,'서울 특별시')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "비공개 속성\n",
+    "\n",
+    "self.__  와 같이 언더바 두개로 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
