--- a/06_class/01_class-basic.ipynb
+++ b/06_class/01_class-basic.ipynb
@@ -17,7 +17,8 @@
     "\n",
     "    # 1. 클래스 속성 - 변수 생성하듯이  \n",
     "    #  - 모든 인스턴스가 공유유\n",
-    "    # - 클래스 속성과 인스턴스 속성 같은 걸 쓸 수 있는데, 인스턴스가 우선시됨됨\n",
+    "    # - 클래스 속성과 인스턴스 속성 같은 걸 쓸 수 있는데, 인스턴스가 (우선시됨 (거리가 더 가까움까움)\n",
+    "         \n",
     "    dream = '취업'\n",
     "\n",
     "    # 2. 생성자  - 인스턴스 만들기 위해 생성하는 것 - 쓰지 않으면 암묵적으로 존재한다고 가정\n",
@@ -110,6 +111,11 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -156,7 +162,7 @@
     "\n",
     "student1.name = '남윤진'         #공간으로 접근 # 인스턴스 속성이라 2와 공유 X\n",
     "student1.phone = '01049439778'\n",
-    "student1.dream.append('창업')    # class의 기본값이 수정되는 경우, 2와 공유 O\n",
+    "student1.dream.append('창업')    # class의 기본값이 수정되는 경우, 2와 공유 O  # 리스트의 매서드 append 사용용\n",
     "student1.introduce()\n",
     "\n",
     "student2.name = '최재동'           \n",
